--- a/package.json
+++ b/package.json
@@ -8,18 +8,16 @@
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-favicon": "^2.0.3",
     "react-router-dom": "^6.11.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-transition-group": "^4.4.5",
     "three": "^0.152.2",
-    "three.js": "^0.77.1"
+    "three.js": "^0.77.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "eslint": "^8.57.0",
     "prettier": "^3.2.5"
   },
   "scripts": {
