--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "",
+  "homepage": "https://elenaustimenko.github.io/my-portfolio/",
   "dependencies": {
     "framer-motion": "^10.12.10",
     "gh-pages": "^5.0.0",
