--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "homepage": "https://elenaustimenko.github.io/my-portfolio/",
   "dependencies": {
+    "@craco/craco": "^7.1.0",
     "framer-motion": "^10.12.10",
     "gh-pages": "^5.0.0",
+    "i18next": "^23.7.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.2.2",
     "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1",
     "react-transition-group": "^4.4.5",
@@ -18,11 +21,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "typescript": "^4.9.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "fix": "prettier . --write",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
